--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,18 @@
     <form>
       <input type="text" name="add" placeholder="Create a task" id="add">
       <button>Add</button>
-    </form>    
+    </form>
+  </div>
+
+  <div class="container">
+    <ul class="tasks">
+      <li class="task"></li>
+      <li class="task"></li>
+      <li class="task"></li>
+      <li class="task"></li>
+      <li class="task"></li>
+      <li class="task"></li>
+    </ul>
   </div>
 
 
