--- a/app/index.html
+++ b/app/index.html
@@ -15,20 +15,14 @@
     <input type="text" name="search" placeholder="Search">
   </header>
   <div id="add-input">
-    <form>
+    <form autocomplete="off">
       <input type="text" name="add" placeholder="Create a task" id="add">
-      <button>Add</button>
+      <button type="button">Add</button>
     </form>
   </div>
 
   <div class="container">
     <ul class="tasks">
-      <li class="task"></li>
-      <li class="task"></li>
-      <li class="task"></li>
-      <li class="task"></li>
-      <li class="task"></li>
-      <li class="task"></li>
     </ul>
   </div>
 
