delete task function complete

--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,7 @@
 <body>
   <header>
     <h1>Task<span>Keeper</span></h1>
-    <input type="text" name="search" placeholder="Search">
+    <input type="text" name="search" placeholder="Search" autocomplete="off">
   </header>
   <div id="add-input">
     <form autocomplete="off">
